using modern language features, mainly records